--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Pilesky Denis</title>
-    <link rel="stylesheet" href="/src/css/main.css">
-</head>
-<body>
-<p>С другой стороны, высокое качество позиционных исследований предполагает независимые способы реализации позиций,
-    занимаемых участниками в отношении поставленных задач. Каждый из нас понимает очевидную вещь: семантический разбор
-    внешних противодействий позволяет оценить значение прогресса профессионального сообщества. В частности, глубокий
-    уровень погружения является качественно новой ступенью соответствующих условий активизации.</p>
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Home</title><link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon"><link rel="stylesheet" href="/assets/css/main.css"></head><body><div class="container"><aside class="left-aside"><div class="navbar"><img class="logo" src="/assets/img/logo.svg"><h1 class="name">Pilesky Denis</h1><small class="university">Vladivostok State University of Economics and Service</small><nav class="navbar-menu"><a class="navbar-menu__item" href="/">Home</a> <a class="navbar-menu__item" href="/about.html">About</a> <a class="navbar-menu__item" href="/projects.html">Projects</a> <a class="navbar-menu__item" href="https://blog.pileskyd.me/">Blog</a> <a class="navbar-menu__item" href="https://github.com/mrdenysu">GitHub</a> <a class="navbar-menu__item" href="https://t.me/mrdenysu">Telegram</a></nav><small class="copyright">Made with ❤️ by Pilesky Denis</small></div></aside><main class="ru"><h1>Привет мир!</h1><p>Меня зовут <b>Пилецкий Денис</b>, программист-самоучка. Добро пожаловать на мой сайт! 🛸</p><p>Я родился в Артёме, Россия. С детства я был творческим - пробовал себя в различных сферах: пение, художественная культура, робототехника. Моей целью всегда было создание полезных и интересных вещей.</p><p>В свободное время я пишу код, разрабатываю свои личные проекты, учусь новому. Идете к своим целям – не откладываете жизнь на потом. ✨</p><p>Вы можете найти более подробную информацию обо мне <a href="/about.html">здесь</a>!</p></main><main class="en"><h1>Hello world!</h1><p>I'm <b>Pilesky Denis</b>, self-taught programmer. Welcome to my website! 🚀</p><p>I was born in Artyom, Russia. Since childhood, I have been creative - I have tried myself in various fields: singing, art culture, robotics. My goal has always been to create useful and interesting things.</p><p>In my free time, I write code, develop my personal projects, and learn new things. Go to your goals – do not postpone life for later. ✨</p><p>You can find more information about me <a href="/about.html">here</a>!</p></main><aside class="right-aside"></aside></div><script src="/assets/js/main.js"></script></body></html>
